--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,6 +4,10 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :price %>
+    <%= f.input :quantity %>
+    <%= f.input :description %>
+    <%= f.association :brand %>
+    <%= f.association :category %>
   </div>
 
   <div class="form-actions">
