--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,6 +7,10 @@
     <tr>
       <th>Name</th>
       <th>Price</th>
+      <th>Quantity</th>
+      <th>Description</th>
+      <th>Brand</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +20,10 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
+        <td><%= product.quantity %></td>
+        <td><%= product.description %></td>
+        <td><%= product.brand %></td>
+        <td><%= product.category %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
