--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -6,8 +6,10 @@
     <%= f.input :price %>
     <%= f.input :quantity %>
     <%= f.input :description %>
+    <%= f.input :avatar, as: :file %>
     <%= f.association :brand %>
     <%= f.association :category %>
+
   </div>
 
   <div class="form-actions">
