--- a/app/views/admin/brands/index.html.erb
+++ b/app/views/admin/brands/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Brands</h1>
 
-<table>
+<table class="table" >
   <thead>
     <tr>
       <th>Name</th>
@@ -13,10 +13,10 @@
   <tbody>
     <% @brands.each do |admin_brand| %>
       <tr>
-        <td><%= brand.name %></td>
-        <td><%= link_to 'Show', admin_brand %></td>
+        <td><%= admin_brand.name %></td>
+        <td><%= link_to 'Show', admin_brand_path(admin_brand) %></td>
         <td><%= link_to 'Edit', edit_admin_brand_path(admin_brand) %></td>
-        <td><%= link_to 'Destroy', admin_brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', admin_brand_path(admin_brand), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
