--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Products</h1>
 
-<table>
+<table class="table" >
   <thead>
     <tr>
       <th>Name</th>
@@ -18,15 +18,15 @@
   <tbody>
     <% @products.each do |admin_product| %>
       <tr>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= product.quantity %></td>
-        <td><%= product.description %></td>
-        <td><%= product.brand %></td>
-        <td><%= product.category %></td>
-        <td><%= link_to 'Show', admin_product %></td>
+        <td><%= admin_product.name %></td>
+        <td><%= admin_product.price %></td>
+        <td><%= admin_product.quantity %></td>
+        <td><%= admin_product.description %></td>
+        <td><%= admin_product.brand.name %></td>
+        <td><%= admin_product.category.name %></td>
+        <td><%= link_to 'Show', admin_product_path(admin_product) %></td>
         <td><%= link_to 'Edit', edit_admin_product_path(admin_product) %></td>
-        <td><%= link_to 'Destroy', admin_product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', admin_product_path(admin_product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
