--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Products</h1>
 
-<table class="table-hover" >
+<table class="table-bordered" >
   <thead>
     <tr>
       <th>Name</th>
