adding devise stuff, just did g devise views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 <%= render "layouts/navbar" %>
 <div class="container-fluid">
 <%= yield %>
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
 </div>
 </body>
 </html>
