--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -9,7 +9,13 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">Pens & co. </a>
+   <ul class="nav navbar-nav">
+      <li> <%= link_to 'Shop', shop_path %> </li>      
+      <li> <%= link_to 'About', about_path %> </li> 
+    </ul>
+
     </div>
+
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -30,26 +36,7 @@
         </li>
 
       </ul>
-      <!-- <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li> -->
-
-        <!-- login below -->
+     
                <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li><%= link_to('Account', edit_user_registration_path) %></li>
@@ -58,8 +45,9 @@
           <li><%= link_to('Login', new_user_session_path)  %></li>
           <li><%= link_to('Register', new_user_registration_path)  %></li>
         <% end %>
+    
       </ul>
-      </ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
