--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -1,48 +1,53 @@
-<h1>Welcome</h1>
-<p>Find me in app/views/storefront/index.html.erb</p>
 <%= render 'search_form' %>
-
-<div class="row">
-  <% @products.each do |product| %>
-    <div class="col-sm-4">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <%= image_tag product.avatar.url(:medium) %>
-          
-            <span class="pull-right text-right">
+<p id="notice"><%= notice %></p>
+<h1 class="text-center">Welcome</h1>
+<% if params[:category_id] %>
+  <h3>All <%= @category.name.capitalize %></h3>
+  <% else %>
+  <h3>All Products</h3>
+<% end %>
+<div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <%= image_tag product.avatar.url (:medium) %>
+            <span class="text-right pull-right">
               <h5><%= number_to_currency product.price %></h5>
             </span>
-           <a href="#">
-            <h5><%= product.name %></h5>
-           </a>
-			<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal<%= product.id %>">
-  Launch demo modal
-			</button>
-
-
-			</button>
+            <a href="#">
+              <h5><%= product.name %></h5>
+            </a>
+            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal_<%= product.id %>">
+              + Quick Info
+            </button>
+          </div>
         </div>
       </div>
-    </div>
-<!-- Modal -->
-      <div class="modal fade" id="myModal<%= product.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel"><%= product.name %></h4>
-		      </div>
-		      <div class="modal-body">
-		        <p><%= number_to_currency product.price %></p>
-		        <p><%= product.description %></p>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		        <button type="button" class="btn btn-primary">Save changes</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
+      <!-- Modal -->
+      <div class="modal fade" id="myModal_<%= product.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel"><%= product.name %></h4>
+            </div>
+            <div class="modal-body">
+              <p><%= number_to_currency product.price %></p>
+              <p><%= product.description %></p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
       </div>
-  <% end %>
+    <% end %>
+  </div>
+</div>
+
+
+
 </div>
