--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -22,6 +22,7 @@
             <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal_<%= product.id %>">
               + Quick Info
             </button>
+            <%= button_to 'Add to Cart', line_items_path(product_id: product), class:  "btn btn-primary" %>
           </div>
         </div>
       </div>
