somes stuff, trying to get my cart working and DRY

--- a/app/views/carts/edit.html.erb
+++ b/app/views/carts/edit.html.erb
@@ -1,27 +1,7 @@
 <h2>Your Cart</h2>
 
-<table class="table">
-	<thead>
-		<tr>
-			<th>Product</th>
-			<th>Quantity</th>
-			<th>Unit Price</th>
-			<th>Total Price</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @cart.line_items.each do |item| %>
-			<tr>
-				<td><%= item.product.name %></td>
-				<td><%= item.quantity %></td>
-				<td><%= number_to_currency item.price %></td>
-				<td><%= number_to_currency item.total_price %></td>
-			</tr>
-	</tbody>
-</table>
 
-<h3>Order Subtotal: <%= number_to_currency @cart.subtotal %></h3>
-
+<%= render @cart %>
 
 <%= link_to "continue shopping", shop_path, class: "btn btn-success" %>
 <%= link_to "empty cart", @cart, method: :delete, data: {confirm: "are you sure?"}, class: "btn btn-danger" %>
