--- a/app/views/storefront/about.html.erb
+++ b/app/views/storefront/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Storefront#about</h1>
-<p>Find me in app/views/storefront/about.html.erb</p>
+<h1>about this shop</h1>
+<p>we are dedicated to providing top quality writing tools and </p>
