--- a/scraps.rhtml
+++ b/scraps.rhtml
@@ -214,6 +214,7 @@ end
 
 
 from line_items_controller.rb
+
 class LineItemsController < ApplicationController
 
 include CurrentCart
@@ -263,3 +264,13 @@ end
 
 
 
+    <%= f.label :name %>
+
+
+
+        format.html { redirect_to @order, notice: 'Order was successfully created.' }
+        format.json { render :show, status: :created, location: @order }
+
+        storefront_index_url
+
+  format.json { render json: @order.errors, status: :unprocessable_entity }
