--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -11,6 +11,11 @@
     </ul>
   </li>
   <li><%= link_to 'About', about_path %></li>
+
+    <% if session[:cart_id] %>
+    <li> <%= link_to "cart", carts_edit_path %> </li>
+    <% end %>
+
 </ul>
 
 <ul class="nav navbar-nav navbar-right">
