--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav">
-  <li><%= link_to 'Shop', shop_path %></li>
+  <li><%= link_to fa_icon('pencil-square', text: 'Pen Shop'), shop_path %></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
     <ul class="dropdown-menu">
@@ -13,7 +13,7 @@
   <li><%= link_to 'About', about_path %></li>
 
     <% if session[:cart_id] %>
-    <li> <%= link_to "cart", carts_edit_path %> </li>
+    <li> <%= link_to fa_icon('shopping-cart', text: 'Shopping Cart'), carts_edit_path %> </li>
     <% end %>
 
 </ul>
